Bug Fixed: project name is not vertically center aligned in new project creation modal (TG-85 #ready-for-test)

--- a/src/app/dashboard/projects/create-project/create-project.component.sass
+++ b/src/app/dashboard/projects/create-project/create-project.component.sass
@@ -7,6 +7,9 @@
   @media (max-width: 480px)
     font-size: 20px
 
+.ps-header-vertical-align
+  margin: auto !important
+
 .ps-body-input
   box-shadow: none
   border-radius: unset
